<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="crm.workshop.echonest.playlist.SearchActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="10pt"
        android:layout_marginBottom="2pt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_artist"
        android:textColor="#146b18"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/input_artiste"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_marginTop="5pt"
        android:layout_marginBottom="2pt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_variety"
        android:textColor="#f2fa19"
        android:textSize="20dp"/>

    <SeekBar
        android:id="@+id/variety_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5pt"
        android:layout_marginBottom="2pt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_adventurousness"
        android:textColor="#f2fa19"
        android:textSize="20dp"/>

    <SeekBar
        android:id="@+id/adventurousness_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5pt"
        android:layout_marginBottom="2pt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_max_results"
        android:textColor="#f2fa19"
        android:textSize="20dp"/>

    <SeekBar
        android:id="@+id/result_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5pt"
        android:layout_marginBottom="2pt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_loudness"
        android:textColor="#da1209"
        android:textSize="20dp"/>

    <SeekBar
        android:id="@+id/loudness"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />



    <Button
        android:layout_marginTop="10pt"
        android:id="@+id/btn_valider"
        android:text="@string/btn_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
