<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="crm.workshop.echonest.playlist.HomeActivity"
    android:orientation="vertical"
    android:background="#FFFFFF">



    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context="crm.workshop.echonest.playlist.HomeActivity">
        <!-- The main content view -->
        <RelativeLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <ImageView
                android:layout_marginTop="@android:dimen/app_icon_size"
                android:layout_marginBottom="@android:dimen/app_icon_size"
                android:id="@+id/imgLogo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_gobplaylists"

                android:contentDescription="@string/desciption_logo" />

            <Button
                android:id="@+id/goto_search_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgLogo"
                android:text="@string/goto_manual" />

            <TextView
                android:id="@+id/label_home"
                android:layout_marginTop="10pt"
                android:layout_marginBottom="2pt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_genre"
                android:textColor="#1d97d6"
                android:layout_below="@+id/goto_search_manual"
                android:textSize="20dp"/>


            <Spinner
                android:id="@+id/all_genres"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_home">
            </Spinner>
            </RelativeLayout>

        <!-- The navigation drawer -->
        <ListView android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="#111"/>


    </android.support.v4.widget.DrawerLayout>



</RelativeLayout>
